# catalyst-ci-testing

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
check/: index.json  manifest.json
examples/basic/: .gitlab-ci.yml
examples/basic/tests/: pipeline.test.yml  test_pipeline.py
examples/with-templates/: .gitlab-ci.yml
examples/with-templates/templates/: deploy.yml
examples/with-templates/tests/: template.test.yml
scripts/: setup-offline.sh
src/catalyst_ci_test/: __init__.py  assertions.py  cli.py  discovery.py  exceptions.py  models.py  parser.py  pytest_plugin.py  runner.py  scaffold.py  yaml_schema.py
tests/: conftest.py  test_assertions.py  test_cli.py  test_discovery.py  test_parser.py  test_runner.py  test_yaml_schema.py
tests/fixtures/simple-project/: .gitlab-ci.yml
