[project]
name = "catalyst-ci-test"
version = "0.1.0"
description = "Test GitLab CI/CD pipelines and templates locally"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["gitlab", "ci", "cd", "testing", "pipeline"]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pytest>=8.0",
]

[project.scripts]
catalyst-ci-test = "catalyst_ci_test.cli:main"

[project.entry-points.pytest11]
catalyst_ci_test = "catalyst_ci_test.pytest_plugin"

[dependency-groups]
dev = [
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalyst_ci_test"]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
